build/resources/test/LO-2/InvalidPrograms/test_26.lo
//bad case:no return type, main takes parameters

main(int a){
    int b;
    {
        return true;
    }
}
